test/fail/M0174.mo
from_candid (to_candid (1)) : Nat
